Adding WIP Refactoring transformer for json